--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -28,4 +28,4 @@ jobs:
           tags: ${{ vars.DOCKERHUB_REPO }}:${{ github.ref_name }}
           platforms: linux/amd64,linux/arm64
           cache-from: type=registry,ref=${{ vars.DOCKERHUB_REPO }}:buildcache
-          cache-to: type=registry,ref=${{ vars.DOCKER_REPO }}:buildcache,mode=max
+          cache-to: type=registry,ref=${{ vars.DOCKERHUB_REPO }}:buildcache,mode=max
